<resources>
    <string name="app_name">TravelEaseMobileApp</string>
    <string name="action_settings">Settings</string>

    <!--    Strings used in Registration Form-->
    <string name="nic">National Identity Card Number (NIC)</string>
    <string name="email">E-Mail Address</string>
    <string name="user_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="date_of_birth">Date Of Birth</string>
    <string name="phone_no">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="sign_up_hint">Don\'t have an account?</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Log Out</string>
    <string name="my_profile">My Profile</string>
    <string name="update_profile_link">Change Profile Details</string>
    <string name="deactivate_profile_link">Deactivate Profile</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_pwd_title">Enter your password to confirm</string>
    <string name="title_activity_reservation">Reservation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="btn_orderHome">ORDER MANAGEMENT</string>
    <string name="btn_payment">PAYMENT MANAGEMENT</string>
    <string name="btn_product">PRODUCT MANAGEMENT</string>
    <string name="btn_feedback">FEEDBACK MANAGEMENT</string>
    <string name="tv_topicOF">Place Your Order</string>
    <string name="tv_cusNameOF">Name</string>
    <string name="tv_contactOF">Contact Number</string>
    <string name="tv_addressOF">Address</string>
    <string name="tv_postalOF">Postal Code</string>
    <string name="tv_wrapOF">Do you want to wrap the gift ?</string>
    <string name="tv_wrappOF">Wrapp the gift ?</string>
    <string name="tv_payOF">Payment Type</string>
    <string name="rd_payYesOF">Yes</string>
    <string name="rd_payNoOF">No</string>
    <string name="rd_cashOF">Cash</string>
    <string name="rd_cardOF">Card</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_editOF">Edit</string>
    <string name="tv_topicRdit">Update Order Details</string>
    <string name="tv_searchEdit">Enter you name</string>
    <string name="et_searchNameEdit">name</string>
    <string name="btn_search_edit">Search</string>
    <string name="tv_contactEdit">Contact Number</string>
    <string name="tv_addressEdit">Address</string>
    <string name="tv_postalEdit">Postal code</string>
    <string name="tv_wrapEdit">Wrap gift ?</string>
    <string name="tv_payEdit">Payment Type</string>
    <string name="rd_yesEdit">Yes</string>
    <string name="rd_noEdit">No</string>
    <string name="rd_cashEdit">Cash</string>
    <string name="rd_cardEdit">Card</string>
    <string name="btn_editEdit">Edit</string>
    <string name="btn_deleteEdit">Delete</string>
    <string name="tv_dateOF">Date</string>
    <string name="tv_dateEdit">Date</string>
    <string name="tv_orderListTopicCust">Orders</string>
    <string name="btn_viewOF">View</string>
    <string name="btn_userProfile">REGISTRATION</string>
    <string name="tv_topicCP">Create Your Profile</string>
    <string name="et_usernameCP">Name</string>
    <string name="et_userageCP">Age</string>
    <string name="et_userphoneCP">"contact "</string>
    <string name="et_userPhoneCP">contact</string>
    <string name="et_userEmailCP">email</string>
    <string name="et_userNicCP">NIC</string>
    <string name="et_userAddressCP">address</string>
    <string name="btn_userPicCP">Choose Picture</string>
    <string name="btn_userSaveCP">Save</string>
    <string name="btn_userViewCP">View</string>
    <string name="tv_nameUL">Name</string>
    <string name="tv_ageUL">Age</string>
    <string name="tv_contactUL">Contact No</string>
    <string name="tv_emailUL">Email</string>
    <string name="tv_nicUL">NIC</string>
    <string name="tv_addressUL">Address</string>
    <string name="btn_updateUP">Update</string>
    <string name="tv_nmUS">Name</string>
    <string name="tv_agUS">Age</string>
    <string name="tv_phoneUS">Contact No.</string>
    <string name="tv_emailUS">Email</string>
    <string name="tv_nicUS">NIC</string>
    <string name="tv_addressUS">Address</string>
    <string name="txt_nameUP">Name</string>
    <string name="txt_ageUP">Age</string>
    <string name="txt_phoneUP">Contact</string>
    <string name="txt_emailUP">Email</string>
    <string name="txt_nicUP">NIC</string>
    <string name="txt_addressUP">Address</string>
    <string name="tv_WrapOLL">Wrap ?</string>
    <string name="tv_orderListTopicCus">My Order</string>
    <string name="btnPaymentOL">Continue With Payment</string>
    <string name="tv_topicOC">Calculate Order Price</string>
    <string name="tv_orderIDOC">Order ID</string>
    <string name="tv_nameOC">Customer</string>
    <string name="tv_amountOC">Total Price of Items</string>
    <string name="tv_delivaryOC">Delivary Charges</string>
    <string name="tv_TotOC">Total Order Price</string>
    <string name="btn_calculateOC">Calculate</string>
    <string name="tv_idOC">Order ID</string>
    <string name="et_id_OC" />
    <string name="btn_clearOC">Clear</string>
    <string name="btnOrdCalMain">Order Calculation</string>
    <string name="tv_AmountOC">Total Price of items (Rs.)</string>
    <string name="tv_DelivaryOC">Delivary Charges (Rs.)</string>
    <string name="tv_TotOrderOC">Total Order Price (Rs.)</string>
    <string name="btn_OrderEmail_HOME">Order Email</string>
    <string name="btn_orderAdmin">Go..</string>
    <string name="btn_adminOrder">Order Admin</string>
    <string name="btn_sumbit">Place Order</string>
    <string name="tvHeadingSuccess">" ｡❈  🎀  𝑀𝓇. 𝒢𝒾𝒻𝓉𝓈  🎀  ❈｡ "</string>
    <string name="tv_usersp">YOUR ORDER IS PROCESSING  ........</string>
    <string name="tv_userSp">YOUR PROFILE IS CREATING ..........</string>
    <string name="tv_totPriceOF">Total Price :  Rs.500.00</string>
    <string name="tv_orderPriceLV">Total Price Rs.500</string>

    <!--    From MAD app-->

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>