<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TravelerSignUp">

    <EditText
        android:id="@+id/nicEditText"
        android:layout_width="359dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/nic"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/fullNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTitle" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="359dp"
        android:layout_height="46dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="359dp"
        android:layout_height="46dp"
        android:layout_marginBottom="128dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="359dp"
        android:layout_height="46dp"
        android:layout_marginBottom="132dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/userNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="359dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="359dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textSize="16pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>